<resources>
    <string name="app_name">Shows</string>
    <string name="email_error_message">Invalid Email</string>
    <string name="login_activity_name">Login</string>
    <string name="login_instruction">In order to continue please log in.</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login">Login</string>
    <string name="password_error_message">Password must be at least 6 characters long</string>
    <string name="top_left_illustration">leftIllustration</string>
    <string name="top_right_illustration">Top right illustration</string>
    <string name="play_button">Play button</string>
    <string name="welcome_text">Welcome, %s!</string>
    <string name="shows">Shows</string>
    <string name="no_shows">No shows</string>
    <string name="no_shows_message">Your shows are not showing. Get it?</string>
    <string name="reviews">Reviews</string>
    <string name="d_reviews_f_average">%d REVIEWS, %.2f AVERAGE</string>
    <string name="show_image">Show image</string>
    <string name="show_rating">Show rating</string>
    <string name="star">Star</string>
    <string name="profile_picture">Profile picture</string>
    <string name="write_a_review">Write a review</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="get_shows">Get Shows</string>
    <string name="shows_app">Shows App</string>
    <string name="add_review_message">"Are you sure you want to add a new review?"</string>
    <string name="logout">Log out</string>
    <string name="add_review">Add a review:</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="unknown">Unknown</string>
    <string name="remember_me">Remember me</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="log_out">Log out</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_method">Select a method</string>
    <string name="picture_change_instruction">Take a new picture or select an image from the gallery</string>
    <string name="register">Register</string>
    <string name="repeat_password_text">Repeat password</string>
    <string name="registration_unsuccessful">Registration unsuccessful, please try again.</string>
    <string name="registration_successful">Registration successful</string>
    <string name="login_unsuccessful_message">Login unsuccessful, please register if you don\'t have an account.</string>
    <string name="top_rated">Top rated</string>
    <string name="shows_fetch_fail">Failed to get shows</string>
    <string name="review_add_fail">Failed to add a review</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="get_shows_failed">Failed to get shows</string>
    <string name="get_top_shows_failed">Failed to get top rated shows</string>
    <string name="get_profile_failed">Failed to get profile information</string>
    <string name="upload_picture_failed">Failed to upload profile picture</string>
</resources>