<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottom_margin_show_details_constlayout"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:navigationIcon="@drawable/sharp_arrow_back_24"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/bottom_margin_show_details_24"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@id/reviewButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/show_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_marign_show_details"
                android:layout_marginBottom="56dp"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="The Office"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/img_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_marign_show_details"
                app:cardCornerRadius="32dp"
                >

                <ImageView
                    android:id="@+id/show_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/show_image"
                    tools:src="@drawable/ic_office"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_marign_show_details"
                android:layout_marginVertical="22dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                tools:text="The Office is an American mockumentary sitcom television series that depicts the everyday work lives of office employees in the Scranton, Pennsylvania, branch of the fictional Dunder Mifflin Paper Company. It aired on NBC from March 24, 2005, to May 16, 2013, lasting a total of nine seasons."
                />

            <TextView
                android:id="@+id/reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_marign_show_details"
                android:text="@string/reviews"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/review_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="@dimen/horizontal_marign_show_details"
                android:textSize="14sp"
                android:textColor="@color/black"
                tools:text="@string/d_reviews_f_average"
                />

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/CustomRatingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/horizontal_marign_show_details"
                android:numStars="@integer/rating_bar_num_stars"
                android:contentDescription="@string/show_rating"
                android:isIndicator="true"
                tools:rating="3"
                />

            <TextView
                android:id="@+id/no_reviews_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:visibility="gone"
                android:text="@string/no_reviews_yet"
                android:textSize="17sp"
                android:textAlignment="center"
                android:textColor="@color/gray"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/review_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/review_card"
                />
            <androidx.constraintlayout.widget.Group
                android:id="@+id/reviews_present_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="review_recycler_view, rating_bar, review_stats"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/reviewButton"
        style="@style/ReviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_marign_show_details"
        android:layout_marginBottom="@dimen/bottom_margin_show_details_24"
        android:text="@string/write_a_review"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/review_button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>

