<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_marign_show_details"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/add_review"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:src="@drawable/close_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/instruction_text"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_marign_show_details"
        android:layout_marginTop="@dimen/margin_24dp"
        android:numStars="5"
        android:stepSize="1"
        android:rating="1"
        android:theme="@style/addReviewRatingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction_text"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginHorizontal="@dimen/horizontal_marign_show_details"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:textColorHint="@color/purple_color"
        android:hint="@string/comment"
        app:boxStrokeColor="@color/add_review_input_selector"
        app:hintTextColor="@color/purple_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_bar"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reviewInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text16sp"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:gravity="top|start"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        style="@style/ReviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_marign_show_details"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/submit"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>